# renda_app

./: .env  README.md  build.sh  db.sqlite3  manage.py  pyproject.toml
login/: urls.py  views.py
mysocial_app/: asgi.py  settings.py  urls.py  wsgi.py
templates/: base.html
templates/registration/: dashboard.html  login.html
