[tool.poetry]
name = "social-app"
version = "0.1.0"
description = ""
authors = ["yawtalkstechs <yawtalkstechs@gmail.com>"]
readme = "README.md"
packages = [{include = "social_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
crispy-tailwind = "^0.5.0"
django-browser-reload = "^1.8.0"
django-tailwind = "^3.5.0"
dj-database-url = "^1.3.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
